--- a/gastask.conf.tmpl
+++ b/gastask.conf.tmpl
@@ -2,7 +2,7 @@
 *genetic
 100000 100 1.2 0.5
 
-# wcet_min wcet_max mem_total util_cpu util_target n_tasks input_size_min task_size_min task_size_max input_size_max output_size_min output_size_max
+# wcet_min wcet_max mem_total util_cpu util_target n_tasks task_size_min task_size_max input_size_min input_size_max output_size_min output_size_max
 *gentask
 100 1000 2000 0.8 0.9 100 8000 20000 800 8000 800 4000
 
