Enable build and gasgen execution
[GA.c]
line 10, 11 (add "extern")

[task.c]
line 6, 7, 9, 10 (add "extern")

[gastask.conf.tmpl]
line 5~7
# wcet_min wcet_max mem_total util_cpu util_target n_tasks task_size_min task_size_max input_size_min input_size_max output_size_min output_size_max
*gentask
100 1000 2000 0.8 0.9 100 4000 6000 800 4000 800 2000

--- a/gastask.conf.tmpl
+++ b/gastask.conf.tmpl
@@ -2,9 +2,9 @@
 *genetic
 100000 100 1.1 1.5
 
-# wcet_min wcet_max mem_total util_cpu util_target n_tasks
+# wcet_min wcet_max mem_total util_cpu util_target n_tasks task_size_min task_size_max input_size_min input_size_max output_size_min output_size_max
 *gentask
-100 1000 2000 0.8 0.9 100
+100 1000 2000 0.8 0.9 100 4000 6000 800 4000 800 2000
 
 # uplink_min uplink_max downlink_min downlink_max n_networks
 *gennetwork
